# sensei-monorepo

.github/workflows/: nightly-release.yml
senseic/: CLAUDE.md  Cargo.toml
senseic/crates/sensei-core/src/: lib.rs  vec_buf.rs
senseic/docs/: Frontend-Architecture.md
senseic/examples/: mini2.sen
senseic/frontend/cli/src/: main.rs
senseic/frontend/hir-eval/src/: comptime.rs  lib.rs  lower.rs  value.rs
senseic/frontend/hir/src/: display.rs  lib.rs
senseic/frontend/mir/src/: display.rs  lib.rs
senseic/frontend/parser/src/ast/: expr.rs  mod.rs
senseic/frontend/values/src/: type_interner.rs
senseic/sir/: Cargo.toml  README.md
senseic/sir/crates/cli/src/: main.rs
senseic/sir/crates/debug-backend/src/: lib.rs
senseic/sir/crates/ffi/: Cargo.toml  README.md  cbindgen.toml
senseic/sir/crates/ffi/include/: senseic_ffi.h
senseic/sir/crates/ffi/src/: lib.rs
senseic/sir/crates/parser/src/: lib.rs  parser.rs
senseic/sir/docs/: ffi_boundary_v1.md
